[package]

name = "game-rs"
version = "0.0.1"
authors = ["Dave O <davidobrite@gmail.com>"]

[[bin]]

name = "game-rs"
path = "src/main.rs"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.glfw_game_window]
git = "https://github.com/pistondevelopers/glfw_game_window"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.cgmath]
git = "http://github.com/bjz/cgmath-rs"
